chore: Newsletter update

--- a/config/templates/newsletter.html
+++ b/config/templates/newsletter.html
@@ -257,7 +257,17 @@
             <!-- Email Footer : BEGIN -->
 	        <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
                 <tr>
-                    <td style="padding: 20px; font-family: sans-serif; font-size: 12px; line-height: 15px; text-align: center; color: #495057;">
+                    <td style="padding: 20px; font-family: sans-serif; font-size: 12px; line-height: 15px; text-align: center; color: #495057; border-top: 1px solid #cccccc;">
+                      <a href="https://freesewing.org/patrons/join"><b>Support FreeSewing: Become a Patron</b></a>
+                    </td>
+                </tr>
+            </table>
+            <!-- Email Footer : END -->
+
+            <!-- Email Footer : BEGIN -->
+	        <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
+                <tr>
+                    <td style="padding: 10px; font-family: sans-serif; font-size: 12px; line-height: 15px; text-align: center; color: #495057;">
                       FreeSewing<br><span class="unstyle-auto-detected-links">67 Plantin en Moretuslei<br>Antwerp / Belgium<br>info@freesewing.org</span>
                         <br><br>
                         <unsubscribe style="color: #ffffff; text-decoration: underline;">
